deploy/rpa-webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpa-webapp-svc
spec:
  selector:
    app: rpa-webapp
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
  type: LoadBalancer
